[workspace]
resolver = "2"
members = [
    "emulator",
    "server",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/kevinji/chip-8-emulator"
authors = ["Kevin Ji"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["http2"] }
clap = { version = "4.3", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
gloo-console = "0.2"
gloo-events = "0.1"
gloo-utils = "0.1"
http = "0.2"
js-sys = "0.3"
lazy_static = "1.4"
rand = "0.8"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "fs", "set-header", "util"] }
wasm-bindgen = "0.2"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlSelectElement",
    "ImageData",
    "KeyboardEvent",
    "Node",
    "Window",
]
