[workspace]
resolver = "2"
members = [
    "emulator",
    "server",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/kevinji/chip-8-emulator"
authors = ["Kevin Ji"]
license = "MIT"
edition = "2021"

[profile.release]
lto = true

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2"] }
clap = { version = "4.5", features = ["derive"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
gloo-console = "0.3"
gloo-events = "0.2"
gloo-utils = "0.2"
http = "1.3"
js-sys = "0.3"
rand = "0.9"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header", "util"] }
wasm-bindgen = "0.2"

[workspace.dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlSelectElement",
    "ImageData",
    "KeyboardEvent",
    "Node",
    "Window",
]
